refactoring of warnings and redundancy